--- a/projeto_bolo/style.css
+++ b/projeto_bolo/style.css
@@ -2,91 +2,155 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
   margin: 0;
   padding: 0;
+  height: 100vh;
+  width: 100vw;
   background-color: #fcfcfc;
-}
-
-h1, h2 {
+  display: grid;
+  grid-template-rows: 110px 1fr 4rem;
+  }
+  
+  h1, h2 {
   color: #333;
-}
-
-ul {
+  }
+  
+  ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-}
-
-nav {
-  background-color: #FACBEA;
+  }
+  
+  nav {
+  background-color: #FFDAB9;
   padding: 10px;
-}
-
-nav ul {
+  }
+  
+  nav ul {
   display: flex;
-}
-
-nav ul li {
+  }
+  
+  nav ul li {
   margin-right: 10px;
-}
-
-nav ul li a {
+  }
+  
+  nav ul li a {
   text-decoration: none;
-  color: #E95793;
+  color: #e69886;
   padding: 10px;
-}
-
-a:hover{
+  }
+  
+  a:hover{
   color: #FFF0F5;
-}
-
-#logo {
+  }
+  
+  #logo {
   display: block;
-  margin: 75px  auto;
+  margin: 75px auto;
   width: 30%;
   height: auto;
-}
-
-footer {
-  background-color: #FACBEA;
+  }
+  
+  footer {
+  background-color: #FFDAB9;
   padding: 09px;
   width: 100%;
   bottom: 0;
   text-align: center;
-}
-
-#icon{
+  }
+  
+  #icon{
   margin-top: 7px;
   width: 30px;
   height: 30px;
   display: flex;
   justify-content: space-between;
-}
-
-#txtcab{
+  }
+  
+  #txtcab{
   margin-left: 10px;
-}
-
-#integran {
+  }
+  
+  #integran {
   margin-top: -30px;
-}
-
-#tit{
+  }
+  
+  #tit{
   font-weight: bold;
-  color: #E95793;
-
-}
-
-.container{
+  color: #e69886;
+  }
+  
+  button{
+  background-color: #e69886;
+  color: #fff;
+  border-radius: 9px;
+  border-color: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  }
+  
+  #titi{
+  color: #fff;
+  font-weight: bold;
+  }
+  
+  ol{
+  list-style-type: none;
+  }
+  
+  #meio{
+  width: 240px;
+  height: 200px;
+  border-radius: 10px;
+  margin-top: 10px;
+  }
+  
+  #exc{
+  list-style-type: decimal;
+  }
+  
+  #mdpreparo{
+  width: 80vw;
+  height: 65%;
+  background-color: #e69886;
+  color: #fff;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  column-gap: 25px;
+  }
+  
+  #meioin{
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+  margin-top: 10px;
+  
+  }
+  
+  #qr{
+  width: 200px;
+  height: auto;
+  }
+  
+  #sobre{
+  margin-left: 40px;
+  font-size: 18px;
+  }
+  
+  .container{
   width: 100%;
   height: 100%;
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 32px;
-}
-
-#ingredientes {
+  }
+  
+  #ingredientes {
   width: 60vw;
   height: 60%;
   background-color: #e69886;
@@ -95,59 +159,13 @@ footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-
-} 
-
-
-button{
-  background-color: #e69886;
-  color: #fff;
-  border-radius: 9px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px 16px;
-}
-
-#titi{
-  color: #fff;
-  font-weight: bold;
-}
-
-ol{
-  list-style-type: none;
-}
-
-#meio{
-  width: 200px;
-  height: auto;
-  border-radius: 10px;
-  margin-left: -13px;
-}
-
-#exc{
-  list-style-type: decimal;
-}
-
-#mdpreparo{
-  width: 1000vw;
-  height: 70%;
-  background-color: #e69886;
-  color: #fff;
-  border-radius: 20px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-#meioin{
+  
+  }
+  
+  #meioin{
   width: 20%;
-  height: 10%;
+  height: 60%;
   border-radius: 10px;
   margin-top: 10px;
-
-}
-
-
-
+  
+  }
